--- a/src/Components/intro/intro.scss
+++ b/src/Components/intro/intro.scss
@@ -1,6 +1,11 @@
+@import "../../global.scss";
 .intro {
     background-color: white;
     display: flex;
+    @include mobile {
+        flex-direction: column;
+        justify-content: center;
+    }
     .left {
         flex: 0.5;
         background-color: white;
@@ -9,23 +14,29 @@
             left: 0;
             width: 700px;
             height: 700px;
-            background-color: #ffffff;
+            background-color: #e64444;
             border-radius: 50%;
             display: flex;
             align-items: flex-end;
             justify-content: center;
             float: right;
+            @include mobile {
+                align-items: start;
+            }
             img {
                 height: 95%;
                 border-radius: 30px;
+                @include mobile {
+                    height: 50%;
+                }
             }
         }
         .imageContainer:hover {
-            background-color: #e64444;
+            background-color: #e2e2e2;
         }
     }
     .right {
-        display: 0.5;
+        flex: 0.5;
         position: relative;
         .wrapper {
             width: 100%;
@@ -34,44 +45,54 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-        }
-        h1 {
-            font-size: 60px;
-            margin: 10px 0;
-        }
-        h2 {
-            font-size: 35px;
-        }
-        h3 {
-            font-size: 30px;
-        }
-        span {
-            font-size: 30px;
-            color: #e64444;
-        }
-    }
-    a {
-        position: absolute;
-        bottom: 10px;
-        left: 40%;
-        img {
-            width: 30px;
-            animation: arrowBlink 2s infinite;
-        }
-        @keyframes arrowBlink {
-            100% {
-                opacity: 0;
+            @include mobile {
+                padding-left: 0;
+                align-items: center;
+            }
+            h1 {
+                font-size: 60px;
+                margin: 10px 0;
+                @include mobile {
+                    font-size: 40px;
+                }
+            }
+            h2 {
+                font-size: 35px;
+            }
+            h3 {
+                font-size: 30px;
+                @include mobile {
+                    font-size: 20px;
+                }
+                span {
+                    font-size: inherit;
+                    color: crimson;
+                }
+                .ityped-cursor {
+                    animation: blink 1s infinite;
+                }
+                @keyframes blink {
+                    50% {
+                        opacity: 1;
+                    }
+                    100% {
+                        opacity: 0;
+                    }
+                }
             }
         }
-        .ityped-cusor {
-            animation: blink 1s infinite;
-        }
-        @keyframes blink {
-            50% {
-                opacity: 1;
+        a {
+            position: absolute;
+            bottom: 10px;
+            left: 40%;
+            img {
+                width: 30px;
+                animation: arrowBlink 2s infinite;
             }
-            100% {
-                opacity: 0;
+            @keyframes arrowBlink {
+                100% {
+                    opacity: 0;
+                }
             }
         }
     }
