--- a/src/Components/portfolio/portfolio.scss
+++ b/src/Components/portfolio/portfolio.scss
@@ -1,3 +1,4 @@
+@import "../../global.scss";
 .portfolio {
     background-color: white;
     display: flex;
@@ -5,12 +6,20 @@
     align-items: center;
     h1 {
         font-size: 50px;
+        @include mobile {
+            font-size: 20px;
+        }
     }
     ul {
         margin: 10px;
         padding: 0;
         display: flex;
         list-style: none;
+        @include mobile {
+            margin: 10px 0;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
     }
     .container {
         width: 70%;
@@ -18,6 +27,9 @@
         align-items: center;
         justify-content: center;
         flex-wrap: wrap;
+        @include mobile {
+            width: 100%;
+        }
         .item {
             width: 220px;
             height: 150px;
@@ -29,7 +41,11 @@
             justify-content: center;
             color: aliceblue;
             position: relative;
-            transition: all .5s ease;
+            transition: all 0.5s ease;
+            @include mobile {
+                width: 130px;
+                height: 100px;
+            }
             h3 {
                 position: absolute;
                 font-size: 20px;
