--- a/src/Components/portfolioList/portfolioList.scss
+++ b/src/Components/portfolioList/portfolioList.scss
@@ -1,9 +1,13 @@
+@import "../../global.scss";
 .portfolioList {
     font-size: 15px;
     margin-right: 50px;
     padding: 7px;
     border-radius: 10px;
     cursor: pointer;
+    @include mobile {
+        margin-right: 20px;
+    }
     &.active {
         background-color: #15023a;
         color: white;
