--- a/src/Components/work/work.scss
+++ b/src/Components/work/work.scss
@@ -1,3 +1,4 @@
+@import "../../global.scss";
 .work {
     background-color: crimson;
     display: flex;
@@ -8,6 +9,9 @@
         height: 50px;
         position: absolute;
         cursor: pointer;
+        @include mobile {
+            display: none;
+        }
         &.left {
             left: 100px;
             transform: rotateY(180deg);
@@ -22,19 +26,29 @@
         position: absolute;
         left: 0;
         transition: all 1s ease-out;
+        @include mobile {
+            height: 100vh;
+            flex-direction: column;
+            justify-content: center;
+        }
         .container {
             width: 100vw;
             display: flex;
             align-items: center;
             justify-content: center;
             .item {
-                background-color: white;
-                border-radius: 10px;
                 width: 700px;
                 height: 100%;
+                background-color: white;
+                border-radius: 20px;
                 display: flex;
                 align-items: center;
                 justify-content: center;
+                @include mobile {
+                    width: 80%;
+                    height: 150px;
+                    margin: 15px 0;
+                }
                 .left {
                     flex: 4;
                     height: 80%;
@@ -55,15 +69,28 @@
                             display: flex;
                             align-items: center;
                             justify-content: center;
+                            @include mobile {
+                                width: 20px;
+                                height: 20px;
+                            }
                             img {
                                 width: 25px;
+                                @include mobile {
+                                    width: 15px;
+                                }
                             }
                         }
                         h2 {
                             font-size: 20px;
+                            @include mobile {
+                                font-size: 13px;
+                            }
                         }
                         p {
                             font-size: 13px;
+                            @include mobile {
+                                display: none;
+                            }
                         }
                         span {
                             font-size: 12px;
